Closed
Bug 1880206
Opened 1 year ago
Closed 1 year ago
video_capture_factory.cc:118:35: error: no member named 'set_allow_pipewire' in 'webrtc::VideoCaptureOptions'
Categories
(Core :: WebRTC, defect)
Core
WebRTC
Tracking
()
RESOLVED
FIXED
124 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox122 | --- | unaffected |
| firefox123 | --- | unaffected |
| firefox124 | --- | fixed |
People
(Reporter: glandium, Assigned: jgrulich)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
When building Firefox for ppc64 or riscv64 linux, the build fails with:
[task 2024-02-14T01:44:36.049Z] 01:44:36 ERROR - /builds/worker/checkouts/gecko/dom/media/systemservices/video_engine/video_capture_factory.cc:118:35: error: no member named 'set_allow_pipewire' in 'webrtc::VideoCaptureOptions'
[task 2024-02-14T01:44:36.049Z] 01:44:36 INFO - 118 | mVideoCaptureOptions->set_allow_pipewire(false);
[task 2024-02-14T01:44:36.049Z] 01:44:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~~^
[task 2024-02-14T01:44:36.050Z] 01:44:36 INFO - 1 error generated.
This is due to the code not being behind WEBRTC_USE_PIPEWIRE, which for some reason is not defined on those platforms.
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 1849608
:jgrulich, since you are the author of the regressor, bug 1849608, could you take a look?
For more information, please visit BugBot documentation.
status-firefox122:
--- → unaffected
status-firefox123:
--- → unaffected
status-firefox124:
--- → affected
status-firefox-esr115:
--- → unaffected
Flags: needinfo?(jgrulich)
| Assignee | ||
Comment 2•1 year ago
|
||
WEBRTC_USE_PIPEWIRE is not defined on ppc64 or riscv64 and this will end
up calling VideoCaptureOptions::set_allow_pipewire() that doesn't exist.
Updated•1 year ago
|
Assignee: nobody → jgrulich
Status: NEW → ASSIGNED
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/4e36702fb3a6
Do not fallback from PipeWire to V4L2 on unsupported arches r=pehrsons
| Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(jgrulich)
Comment 4•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•