Bug 1880206 - Do not fallback from PipeWire to V4L2 on unsupported arches r=pehrsons

WEBRTC_USE_PIPEWIRE is not defined on ppc64 or riscv64 and this will end
up calling VideoCaptureOptions::set_allow_pipewire() that doesn't exist.

Differential Revision: https://phabricator.services.mozilla.com/D201803